Bug#9775 - Stored procedures: crash if create function that returns enum or set   Fix bug and implement return type casting.